<resources>
    <string name="app_name">KB</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_in">Log In</string>
    <string name="err_msg_name">Enter your username</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="title_activity_home">Home</string>
    <string name="title_pasien">Pasien</string>
    <string name="title_grafik">Grafik</string>
    <string name="title_layanan">Layanan</string>
    <string name="title_laporan">Laporan</string>
    <string name="title_posyandu">Posyandu</string>
    <string name="title_kader">Petugas</string>
    <string name="title_bidan">Bidan</string>
    <string name="title_about">About</string>
    <string name="title_activity_pasien">Pasien</string>
    <string name="input_id_pasien">Id Pasien</string>
    <string name="input_id_pos">Posyandu</string>
    <string name="input_nama_pasien">Nama Pasien</string>
    <string name="input_no_telpon_pasien">Nomor Telpon Pasien</string>
    <string name="input_tgl_lahir">Tanggal Lahir Pasien</string>
    <string name="input_umur">Usia Pasien</string>
    <string name="input_alamat">Alamat Pasien</string>
    <string name="input_pendidikan">Pendidikan Terakhir Pasien</string>
    <string name="input_pekerjaan">Pekerjaan Pasien</string>
    <string name="input_anak">Jumlah Anak Pasien</string>
    <string name="input_hamil">Hamil</string>
    <string name="input_gakin">Gakin</string>
    <string name="input_pus4t">Pus4t</string>
    <string name="input_metode">Metode</string>
    <string name="title_activity_posyandu">Posyandu</string>
    <string name="title_activity_detail_pasien">Detail Pasien</string>
    <string name="title_activity_edit_pasien">Edit Pasien</string>
    <string name="tvPosyandu">Nama Posyandu</string>
    <string name="tvPetugas">Nama Pembina</string>
    <string name="tvAlamat">Alamat Posyandu</string>
    <string name="tvNoTelp">Nomor Telepon Posyandu</string>
    <string name="title_activity_detail_posyandu">Detail Posyandu</string>
    <string name="title_activity_edit_posyandu">Edit Posyandu</string>
    <string name="inputNamaPos">Nama Posyandu</string>
    <string name="inputNamaPet">Nama Pembina</string>
    <string name="inputAlamatPos">Alamat Posyandu</string>
    <string name="inputNoTelpPos">Nomor Telpon Posyandu</string>
    <string name="title_activity_kader">Petugas</string>
    <string name="title_activity_detail_kader">Detail Petugas</string>
    <string name="inputNamaKader">Nama </string>
    <string name="inputNip">NIP </string>
    <string name="inputAlamatKader">Alamat </string>
    <string name="inputNoTelpKader">Nomor Telpon </string>
    <string name="inputUnameKader">Username </string>
    <string name="inputPassKader">Password </string>
    <string name="title_activity_edit_kader">Edit Petugas</string>
    <string name="title_activity_bidan">Bidan</string>
    <string name="title_activity_grafik">Grafik</string>
    <string name="title_activity_layanan">Layanan</string>
    <string name="title_activity_detail_layanan">Detail Layanan</string>
    <string name="title_activity_edit_layanan">Edit Layanan</string>
    <string name="title_activity_petugas">Petugas</string>
    <string name="title_activity_kadersss">Kader</string>
    <string name="title_activity_laporan">Laporan</string>
    <string name="type_name">Cari di sini!</string>


    <!-- strings for dialog -->
    <string name="string_permission_help">Help</string>
    <string name="string_permission_help_text">The permission is missing.\n\nTo grant this permission click on Settings, then Permissions and turn the permission on.\n\nThen click back twice to return to the app</string>
    <string name="string_permission_quit">Exit App</string>
    <string name="title_activity_laporan_kartu">Laporan Kartu Status Pasien</string>
    <string name="title_activity_laporan_pelayanan">Laporan Pelayanan</string>
</resources>
