<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_id_pasien"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_id_pasien"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tvPos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_id_pos"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner_id_pos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_nama_pasien"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_nama_pasien"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_no_telpon_pasien"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_no_telpon_pasien"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />
        </android.support.design.widget.TextInputLayout>
        <RelativeLayout
            android:id="@+id/relative_ttl_pasien"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_ttl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:visibility="gone"
                android:text="@string/input_tgl_lahir"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="end"
                android:src="@drawable/date" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:text="@string/input_tgl_lahir"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>
        </RelativeLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_umur_pasien"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_umur"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_alamat_pasien"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_alamat"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_pendidikan_pasien"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_pendidikan"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_pekerjaan_pasien"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_pekerjaan"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_anak_pasien"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_anak"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:id="@+id/tvHam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_hamil"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner_hamil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>
        <TextView
            android:id="@+id/tvGak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_gakin"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner_gakin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>
        <TextView
            android:id="@+id/tvPus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_pus4t"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner_pus4t"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>
        <TextView
            android:id="@+id/tvMet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_metode"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner_metode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>
    </LinearLayout>
</ScrollView>