<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Petugas.EditKaderActivity"
    tools:showIn="@layout/activity_edit_kader">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_nama_kader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputNamaKader"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_nip_kader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputNip"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:id="@+id/tvPosss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvPosyandu"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinner_id_pet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_alamat_kader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputAlamatKader"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_no_kader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputNoTelpKader"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_uname_kader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputUnameKader"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_pass_kader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputPassKader"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>