<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_nama_posyandu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputNamaPos"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tvPos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inputNamaPet"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinner_id_pet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_alamat_posyandu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputAlamatPos"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_no_telpon_posyandu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputNoTelpPos"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />
    </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>