<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomeActivity"
    tools:showIn="@layout/activity_home">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/cardPasien"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginStart="60dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/title_pasien" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardGrafik"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginStart="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/title_grafik" />
            </android.support.v7.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/cardLayanan"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginStart="60dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_layanan"
                    android:layout_gravity="center"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardLaporan"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginStart="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_laporan"
                    android:layout_gravity="center"/>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/cardPosyandu"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginStart="60dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_posyandu"
                    android:layout_gravity="center"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardKader"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginStart="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_kader"
                    android:layout_gravity="center"/>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/cardBidan"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginStart="60dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_bidan"
                    android:layout_gravity="center"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardAbout"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginStart="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Kader"
                    android:layout_gravity="center"/>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/llProgressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#c81e1515"
        android:orientation="horizontal"
        android:visibility="gone">

    </LinearLayout>


</LinearLayout>